1999-06-10  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Resend.pm (post): Don't use Reply-To to extract user.

Sat Jun  5 11:50:49 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_queueserv: Cleaned up some || -> or confusion.

	* bin/mj_enqueue: ditto.

Thu Jun  3 20:40:32 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Resend.pm: Forgot to quote 'mv'.

Tue Jun  1 22:34:01 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (dispatch): Make sure that $user is defined and
 	nonzero; when we allocate Mj::Addr objects, we want to make sure
 	that they are valid.  (They can be anomymous.)

Thu May 27 00:49:15 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Resend.pm (_post): Unlink the message file appropriately.
	(post): Spool the message ourselves in the case of stalls; this
 	removes lots of the special casing from the Token.pm routines and
 	costs very little in terms of extra code here.  Use t_gen to get
 	random strings for the name and just make sure another file of
 	that name doesn't exist.  Use a different spool directory (outside
 	of the filespace) to do this.

	* lib/mj_cf_data.pl: 'sender' must be visible for emailed commands
 	to work.

	* lib/Mj/Token.pm (t_remove): No need to unspool; a higher level
 	can take care of that itself if necessary.
	(confirm): Don't do spooling.
	(consult): Ditto.
	(t_accept): Don't try to play any filename games.

	* bin/mj_queuerun (resend): Don't use the the iterative functions;
 	instead, just submit the queue file directly.  post() may move
 	this file into its spool area, so be careful not to bomb unlinking
 	it.

Wed May 26 00:25:17 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_queuerun: Change queue directory location throughout.

	* bin/mj_enqueue (in): Move location of queue directory into
 	persistent (instead of temporary) storage; this makes spooling
 	files for approval a rename instead of a copy.
