@@ -1,3 +1,13 @@
+Wed Jun  9 23:45:16 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
+
+	* setup/install_util.pl (safe_mkdir): Always make sure that the
+ 	mode and owner are correct, even if the directory already exists.
+
+Tue Jun  8 10:44:35 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
+
+	* bin/mj_trigger,bin/mj_email,bin/mj_queuerun: Fix debug
+ 	redirects.
+
 1999-06-10  Jason L Tibbitts III  <tibbs@math.uh.edu>
 
 	* lib/Mj/Resend.pm (post): Don't use Reply-To to extract user.
